--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -53,6 +53,133 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "1.   \n",
+        "The residuals are:\n",
+        "\n",
+        "$$\n",
+        "e^i = y^i - \\hat{y}^i = y^i - (b_0 + b_1 z_{i1} + b_2 z_{i2})\n",
+        "$$\n",
+        "\n",
+        "The SSE is:\n",
+        "\n",
+        "$$\n",
+        "SSE = \\sum_{i=1}^N (e^i)^2 = \\sum_{i=1}^N \\big(y^i - b_0 - b_1 z_{i1} - b_2 z_{i2}\\big)^2\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "---\n",
+        "2.   \n",
+        "Take derivatives of SSE with respect to the parameters and set\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial SSE}{\\partial b_0} = -2 \\sum_{i=1}^N (y^i - b_0 - b_1 z_{i1} - b_2 z_{i2}) = 0\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial SSE}{\\partial b_1} = -2 \\sum_{i=1}^N z_{i1} (y^i - b_0 - b_1 z_{i1} - b_2 z_{i2}) = 0\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial SSE}{\\partial b_2} = -2 \\sum_{i=1}^N z_{i2} (y^i - b_0 - b_1 z_{i1} - b_2 z_{i2}) = 0\n",
+        "$$\n",
+        "\n",
+        "---\n",
+        "3.   \n",
+        "\n",
+        "From the derivatives:\n",
+        "\n",
+        "$$\n",
+        "\\sum_{i=1}^N e^i = 0 \\quad \\Rightarrow \\quad \\text{mean residual } \\bar{e} = 0\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\sum_{i=1}^N e^i z_{i1} = 0, \\quad \\sum_{i=1}^N e^i z_{i2} = 0\n",
+        "$$\n",
+        "\n",
+        "Residuals are orthogonal to each predictor, just like in simple linear regression.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "4.   \n",
+        "\n",
+        "Since the predictors are centered, we have:\n",
+        "\n",
+        "$$\n",
+        "\\sum_{i=1}^N z_{i1} = \\sum_{i=1}^N z_{i2} = 0\n",
+        "$$\n",
+        "\n",
+        "Then, from the first normal equation:\n",
+        "\n",
+        "$$\n",
+        "\\sum_{i=1}^N y^i - N b_0 = 0\n",
+        "\\quad \\Rightarrow \\quad\n",
+        "b_0^* = \\bar{y}\n",
+        "$$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "5.   \n",
+        "\n",
+        "Define $\\tilde{y}_i = y_i - \\bar{y}$.  \n",
+        "Then the remaining equations are:\n",
+        "\n",
+        "$$\n",
+        "\\sum z_{i1} (\\tilde{y}_i - b_1 z_{i1} - b_2 z_{i2}) = 0\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\sum z_{i2} (\\tilde{y}_i - b_1 z_{i1} - b_2 z_{i2}) = 0\n",
+        "$$\n",
+        "\n",
+        "Expanding gives the **matrix form**:\n",
+        "\n",
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "\\sum z_{i1}^2 & \\sum z_{i1} z_{i2} \\\\\n",
+        "\\sum z_{i1} z_{i2} & \\sum z_{i2}^2\n",
+        "\\end{bmatrix}\n",
+        "\\begin{bmatrix} b_1 \\\\ b_2 \\end{bmatrix}\n",
+        "=\n",
+        "\\begin{bmatrix}\n",
+        "\\sum z_{i1} \\tilde{y}_i \\\\\n",
+        "\\sum z_{i2} \\tilde{y}_i\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "This is the **normal equation** $A b = C$.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "6.   \n",
+        "\n",
+        "Divide sums by $N$ and replace $z_{ij} = x_{ij} - m_j$:\n",
+        "\n",
+        "$$\n",
+        "A =\n",
+        "\\begin{bmatrix}\n",
+        "\\mathrm{Var}(x_1) & \\mathrm{Cov}(x_1, x_2) \\\\\n",
+        "\\mathrm{Cov}(x_1, x_2) & \\mathrm{Var}(x_2)\n",
+        "\\end{bmatrix},\n",
+        "\\quad\n",
+        "C =\n",
+        "\\begin{bmatrix}\n",
+        "\\mathrm{Cov}(x_1, y) \\\\\n",
+        "\\mathrm{Cov}(x_2, y)\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "The slopes depend on the variances and covariances of the predictors. The intercept is simply the mean of $y$. Residuals remain orthogonal to all regressors, ensuring the best linear unbiased estimates."
+      ],
+      "metadata": {
+        "id": "jq4pi2RqwqbK"
+      },
+      "id": "jq4pi2RqwqbK"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "b005058d",
